--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^9.3.0",
-    "figlet": "^1.5.2"
+    "figlet": "^1.5.2",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/figlet": "^1.5.4",
+    "@types/node": "^18.0.0",
+    "ts-node": "^10.8.1",
+    "tsconfig-paths": "^4.0.0"
   },
   "bin": {
     "just": "./just.js"
